; ModuleID = '/home/carl/AnghaBench/hashcat/deps/secp256k1/src/extr_secp256k1.c_secp256k1_context_preallocated_clone_size.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/secp256k1/src/extr_secp256k1.c_secp256k1_context_preallocated_clone_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@SECP256K1_ECMULT_GEN_CONTEXT_PREALLOCATED_SIZE = common dso_local global i64 0, align 8
@SECP256K1_ECMULT_CONTEXT_PREALLOCATED_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @secp256k1_context_preallocated_clone_size(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = call i64 @ROUND_TO_ALIGN(i32 8)
  store i64 %4, i64* %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = icmp ne %struct.TYPE_3__* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @VERIFY_CHECK(i32 %7)
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  %11 = call i64 @secp256k1_ecmult_gen_context_is_built(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %1
  %14 = load i64, i64* @SECP256K1_ECMULT_GEN_CONTEXT_PREALLOCATED_SIZE, align 8
  %15 = load i64, i64* %3, align 8
  %16 = add i64 %15, %14
  store i64 %16, i64* %3, align 8
  br label %17

17:                                               ; preds = %13, %1
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = call i64 @secp256k1_ecmult_context_is_built(i32* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %17
  %23 = load i64, i64* @SECP256K1_ECMULT_CONTEXT_PREALLOCATED_SIZE, align 8
  %24 = load i64, i64* %3, align 8
  %25 = add i64 %24, %23
  store i64 %25, i64* %3, align 8
  br label %26

26:                                               ; preds = %22, %17
  %27 = load i64, i64* %3, align 8
  ret i64 %27
}

declare dso_local i64 @ROUND_TO_ALIGN(i32) #1

declare dso_local i32 @VERIFY_CHECK(i32) #1

declare dso_local i64 @secp256k1_ecmult_gen_context_is_built(i32*) #1

declare dso_local i64 @secp256k1_ecmult_context_is_built(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
